--- a/Dht.Sharp/Dht.Sharp.csproj
+++ b/Dht.Sharp/Dht.Sharp.csproj
@@ -1,26 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup Label="Globals">
-    <SccProjectName>SAK</SccProjectName>
-    <SccProvider>SAK</SccProvider>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccLocalPath>SAK</SccLocalPath>
+  <PropertyGroup>
+    <TargetFrameworks>netstandard2.0;net6.0-windows10.0.17763.0;net7.0-windows10.0.17763.0</TargetFrameworks>
+    <LangVersion>9.0</LangVersion>
+    <OutputPath>..\$(Configuration)\</OutputPath>
+    <GeneratePackageOnBuild Condition="'$(Configuration)' == 'Release'">true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net5.0-windows10.0.17763.0</TargetFrameworks>
-    <LangVersion>9.0</LangVersion>
-    <OutputPath>..\$(Configuration)\</OutputPath>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
-    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <Description>Native C# library for the DHT11 and DHT22 sensors</Description>
+    <Authors>Daniel M. Porrey, Olof Lagerkvist</Authors>
+    <Company>Daniel M. Porrey, Olof Lagerkvist</Company>
+    <Copyright>Copyright © 2018-2022</Copyright>
+    <PackageVersion>2.0.0</PackageVersion>
   </PropertyGroup>
-
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.17763.1000" Condition="'$(TargetFramework.Contains(`-windows`))' == 'false'" />
     <PackageReference Include="System.Device.Gpio" Version="1.5.0" Condition="'$(TargetFramework.Contains(`-windows`))' == 'true'" />
