--- a/Dht.Sharp/Dht.Sharp.csproj
+++ b/Dht.Sharp/Dht.Sharp.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net6.0-windows10.0.17763.0;net7.0-windows10.0.17763.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net6.0-windows10.0.17763.0;net7.0-windows10.0.17763.0;net8.0-windows10.0.17763.0</TargetFrameworks>
     <LangVersion>9.0</LangVersion>
     <OutputPath>..\$(Configuration)\</OutputPath>
     <GeneratePackageOnBuild Condition="'$(Configuration)' == 'Release'">true</GeneratePackageOnBuild>
@@ -17,6 +17,7 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="LTRData.Extensions" Version="*" />
     <PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.17763.1000" Condition="'$(TargetFramework.Contains(`-windows`))' == 'false'" />
     <PackageReference Include="System.Device.Gpio" Version="1.5.0" Condition="'$(TargetFramework.Contains(`-windows`))' == 'true'" />
   </ItemGroup>
